[package]
name = "oss-rust-sdk"
version = "0.2.2"
authors = ["NoXF <xianyou.cyq@gmail.com>","Snowind <jinks.tao@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/oss-rust-sdk"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.12"
chrono = "0.4"
rust-crypto = "0.2"
log = "0.4"
quick-xml = "0.18"
derive_more = "0.99"
bytes = "1"
